# telegram-bot

./: .dockerignore  .env.template  .gitignore  LICENSE  Pipfile  README.md  docker-compose.dev.yml  fetch_allowed_ips.py  gen_keys.py  main.py  pyproject.toml
docker/dev/: bot.Dockerfile  bot.entrypoint.sh  vault.Dockerfile  vault.setup.sh
docker/prod/: bot.Dockerfile  bot.entrypoint.sh
server/: urls.py  wsgi.py
server/apps/core/: admin.py  apps.py  bot.py  messages.py  models.py  views.py
server/apps/core/logic/: messages.py  vault.py  wireguard.py
server/apps/core/management/commands/: renew_vault_token.py  set_keys.py  set_webhook.py  sync_with_vault.py
server/apps/core/migrations/: 0001_add_models.py
server/settings/: __init__.py
server/settings/components/: __init__.py  common.py  logging.py  telegram.py  vault.py  wireguard.py
server/settings/environments/: development.py  production.py
sql/: create_db.sql  drop_db.sql
